--- a/client/src/index.css
+++ b/client/src/index.css
@@ -63,10 +63,38 @@ input[type=text]:focus {
   border: 3px solid #555;
 }
 
+.page-container {
+  text-align: center;
+}
+
+.card-container {
+  box-sizing: border-box;
+  position: absolute;
+  left: 250px
+  
+}/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+
+/* Remove extra left and right margins, due to padding in columns */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the counter cards */
 .todo-cards {
-  border: 1px solid;
-  width: 50%;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  border-radius: 5px; 
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+  padding: 20px;
+  margin-bottom: 15px;
 }
